fix: homepage CTA alignment

--- a/Components/cards.css
+++ b/Components/cards.css
@@ -45,10 +45,10 @@
     width: calc(100% - 111px);
 }
 
-
 .card-horizontal.default-container .image-container{
     margin: 1rem 0 1rem 1rem;
 }
+
 .text-container{
     padding: 1rem;
     display: flex;
@@ -93,9 +93,6 @@
     top: 1rem; 
     left: 0rem;  
     opacity: 0.8;
-}
-.CTA-Container{
-    padding: 0 1rem 1rem;
 }
 
 .CTA-Container .btn:not(:last-child){
